Auto-injecting converters